[package]
name = "zoom-updater"
version = "0.1.0"
edition = "2024"

description = "Zoom Updater for Windows"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
keywords = ["zoom", "updater", "windows"]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.8"

[[bin]]
name = "Zoom-Updater"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
sha2 = "0.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
